fix spacing issues

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ div#title-and-content{
     height: 900px;
     display: flex;
     flex-direction: column;
+    align-items:center;
 
 }
 
@@ -53,19 +54,22 @@ div#title{
 
 div#main-content{
     width: 500px;
-    height: 225px;
-    margin-left: 15px;
-    margin-right: 15px;
+    height: 170px;
+    margin-left: 20px;
+    padding-left: 30px;
+   
 }
 
 div#media{
     height: 600px;
+    padding-left: 100px;
 }
 
 div#nav{
     width: 250px;
     height: 250px;
-    margin-left: 25px;
+    margin-left: 20px;
+    padding-left: 10px;
 }
 
 
